# live_voice_transcribe

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/fonts/: icons_list.html
assets/icon/: icon.afdesign  icon.rgba
src/: audio.rs  main.rs  model.rs  ui_helpers.rs
src/types/: language.rs
